--- a/demoProject2/src/main/resources/templates/example/ex2.html
+++ b/demoProject2/src/main/resources/templates/example/ex2.html
@@ -79,9 +79,9 @@
     th:text == [[...]]
     th:utext == [(...)]
   -->
-
+  <!-- /* [[이게 타임리프용 주석]] */ -->
   <p>입력 받은 이름 : [[${param.inputName}]]</p>
-
+   
   [(${str})]
 
   <hr>
