--- a/boardProject-boot/src/main/resources/templates/myPage/myPage-changePw.html
+++ b/boardProject-boot/src/main/resources/templates/myPage/myPage-changePw.html
@@ -35,6 +35,11 @@
 
         <form action="changePw" method="POST" name="myPageFrm" id="changePw">
 
+          <!-- action : 상대경로로 작성되어있음
+              현재 주소 : /myPage/changePw (GET)
+              목표 주소 : /myPage/changePw (POST) 
+          -->
+
           <div class="myPage-row">
               <label>현재 비밀번호</label>
               <input type="password" name="currentPw" id="currentPw" maxlength="30" >              
