--- a/homeProject-board/src/main/resources/templates/board/boardDetail.html
+++ b/homeProject-board/src/main/resources/templates/board/boardDetail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title th:text="|${board.boardNo}번 글|">게시판 이름 이아라</title>
+    <title th:text="|${board.boardNo}번 글|">게시판 이름</title>
 
 
     <th:block th:replace="~{common/common}"></th:block>
@@ -88,9 +88,8 @@
                     </div>
                 </th:block>
                 
-                <!-- 일반 이미지 출력 -->
                 <th:block th:if="${#lists.size(board.imageList) > start}">
-                            <!-- 썸네일 있다면 start = 1 / 없다면 start = 0 -->
+
                     <h5>업로드 이미지</h5>  
                     <th:block th:each="i : ${#numbers.sequence(start, #lists.size(board.imageList) - 1)}">                                
                         <div class="img-box">
