--- a/homeProject-board/src/main/resources/templates/myPage/myPage-fileTest.html
+++ b/homeProject-board/src/main/resources/templates/myPage/myPage-fileTest.html
@@ -60,7 +60,7 @@
           <h3>업로드 테스트 1</h3>
           
           <!-- type="file" 도 결국에는 Parameter 
-              -> @RequestParam("uploadFile")으로 처리 가능
+              -> @RequestParam으로 처리 가능
           -->
           <input type="file" name="uploadFile">
          
