--- a/boardProject-home/src/main/resources/templates/common/main.html
+++ b/boardProject-home/src/main/resources/templates/common/main.html
@@ -6,13 +6,14 @@
   <title th:text="#{app.name}">messages.properties 값 출력</title>
 
   <!-- templates/common/common.html 조각으로 추가 -->
+  <th:block th:replace="~{common/common}"></th:block>
 </head>
 <body>
 
   <main>
 
     <!-- common/header.html 을 조각으로 추가 -->
-
+    <th:block th:replace="~{common/header}"></th:block>
     <!-- 메인 페이지 내용  -->
     <section class="content">
     
@@ -24,7 +25,8 @@
         <!-- 로그인, 회원가입 버튼 -->
 
           <!-- 로그인이 되어있지 않은 경우 -->
-          
+		  <th:block th:if="${session.loginMember == null}">
+			
             <!-- 로그인 박스 -->
             <form action="/member/login" method="POST" id="loginForm">
               <fieldset class="id-pw-area">
@@ -61,9 +63,10 @@
               </article>
     
             </form>
-
+		</th:block>
+			
           <!-- 로그인이 되어있는 경우 -->
-          
+		  <th:block th:if="${session.loginMember != null}">
             <article class="login-area">
 
               <a href="#">
@@ -86,7 +89,7 @@
               </div>
 
             </article>
-          
+          </th:block>
 
       </section>
 
@@ -94,7 +97,9 @@
   </main>
 
   <!-- common/footer 추가-->
+  <th:block th:replace="~{common/footer}"></th:block>
 
-  <!-- script 추가-->
-</body>
+    <!-- script 추가-->
+	<script src="/js/main.js"></script>
+	</body>
 </html>
