--- a/boardProject-home/src/main/resources/templates/common/main.html
+++ b/boardProject-home/src/main/resources/templates/common/main.html
@@ -13,7 +13,8 @@
   <main>
 
     <!-- common/header.html 을 조각으로 추가 -->
-    <th:block th:replace="~{common/header}"></th:block>
+	<th:block th:replace="~{common/header}"></th:block>
+
     <!-- 메인 페이지 내용  -->
     <section class="content">
     
@@ -25,8 +26,8 @@
         <!-- 로그인, 회원가입 버튼 -->
 
           <!-- 로그인이 되어있지 않은 경우 -->
-		  <th:block th:if="${session.loginMember == null}">
-			
+          <th:block th:if="${session.loginMember == null}">
+          
             <!-- 로그인 박스 -->
             <form action="/member/login" method="POST" id="loginForm">
               <fieldset class="id-pw-area">
@@ -55,41 +56,48 @@
               </label>
     
               <article class="signup-find-area">
-
-                <a href="#">회원가입</a>
-
+                <a href="/member/signup">회원가입</a>
                 <span> | </span>
                 <a href="#">ID/PW 찾기</a>
               </article>
-    
             </form>
-		</th:block>
-			
-          <!-- 로그인이 되어있는 경우 -->
-		  <th:block th:if="${session.loginMember != null}">
-            <article class="login-area">
+          </th:block>
 
-              <a href="#">
+          <!-- 로그인이 되어있는 경우 -->
+          <!--<th:block th:unless="${session.loginMember == null}"></th:block>-->
+          <th:block th:if="${session.loginMember != null}">
+            <article class="login-area">
+              <a href="/myPage/profile">
                 <!-- 프로필 이미지 -->
-                <img src="/images/user.png"
+
+                <!-- 
+                  session.loginMember.profileImg 에 유저가 등록한 이미지가 있다면
+                  (null이 아니라면) 
+                  session.loginMember.profileImg 에 저장된 이미지 경로를 사용함.
+                  없다면(null이라면) messages.properties에 있는 기본 이미지 경로를 사용
+                
+                  th:with -> 변수 선언
+                  -->
+                  
+                  <!-- th:with 변수 설정하는 태그 -->
+                <img th:with="user=#{user.default.image}"   
+                 th:src="${session.loginMember.profileImg ?: user}"
                      id="memberProfile"
                      alt="프로필 이미지" >
               </a>
 
               <!-- 닉네임, 이메일, 로그아웃 버튼 영역 -->
-              <div class="my-info">
-                
+              <div class="my-info" th:object="${session.loginMember}">
                 <div>
-                  <a href="#" id="nickname">닉네임</a>
-                  <a href="#" id="logoutBtn">로그아웃</a>
+                  <a href="/myPage/info" id="nickname" th:text="*{memberNickname}">닉네임</a>
+                  <a href="/member/logout" id="logoutBtn">로그아웃</a>
                 </div>
-
-                <p>이메일</p>
-
+                <p th:text="*{memberEmail}">이메일</p>
               </div>
 
             </article>
           </th:block>
+          
 
       </section>
 
@@ -99,7 +107,7 @@
   <!-- common/footer 추가-->
   <th:block th:replace="~{common/footer}"></th:block>
 
-    <!-- script 추가-->
-	<script src="/js/main.js"></script>
-	</body>
+  <!-- script 추가-->
+  <script src="/js/main.js"></script>
+</body>
 </html>
