--- a/boardProject-boot/src/main/resources/templates/common/main.html
+++ b/boardProject-boot/src/main/resources/templates/common/main.html
@@ -108,5 +108,9 @@
 
   <!-- script 추가-->
   <script src="/js/main.js"></script>
-</body>
+
+  <!-- websocket_test.js 추가 -->
+  <script src="/js/websocket_test.js"></script>
+  
+  </body>
 </html>
